<resources>

    <string name="app_name">pmtest</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">PMTest</string>
    <string name="install_path">Install path</string>
    <string name="uninstall_path">Uninstall package</string>
    <string name="install_button">Install</string>
    <string name="uninstall_button">Uninstall</string>
    <string name="waiting_command">Waiting for a command</string>
    <string name="success_install">Application %s succesfully installed</string>
    <string name="success_uninstall">Application %s succesfully uninstalled</string>
    <string name="fail_install">Application %s install failed</string>
    <string name="fail_uninstall">Application %s uninstall failed</string>
    <string name="execution">"%s" is in process</string>
    <string name="button_show_packages">Show all installed packages</string>
    <string name="button_sql">Run SQL</string>
    <string name="success_sql">Query %s succesfully executed</string>
    <string name="fail_sql">Query %s failed</string>
    <string name="pid">PID</string>
    <string name="button_kill">KILL!</string>
    <string name="kill_success">SUCCESS. Process %d succesfully killed</string>
    <string name="kill_fail">FAIL. kill process %d</string>
    <string name="button_chown">Check chown</string>
    <string name="chown_success">SUCCESS. All this stuff(chown etc.) succesfully executed</string>
    <string name="chown_fail">FAIL. Some of this things(chown etc.) are broken</string>
</resources>