<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="3dp"
    android:paddingRight="3dp">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		<EditText
	        android:id = "@+id/input_install_path"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/install_path"
	        android:layout_weight="3"/>
        <Button
            android:id="@+id/button_install"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/install_button"
            android:layout_weight="1"
            android:onClick="onInstallButtonClick"/>
            
	</LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		<EditText
	        android:id = "@+id/input_uninstall_path"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/uninstall_path"
	        android:layout_weight="3"/>
		<Button
            android:id="@+id/button_uninstall"
            android:text="@string/uninstall_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onUninstallButtonClick"/>
	</LinearLayout>
	
    
	<Button
         android:id="@+id/button_sql"
         android:layout_marginTop="20dp"
         android:text="@string/button_sql"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="onSqlButtonClick"/>
	
	
    <TextView
        android:id="@+id/text_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiting_command"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        />
</LinearLayout>
